Shopping website without login and signup features

--- a/src/Components/NewCollections/NewCollections.css
+++ b/src/Components/NewCollections/NewCollections.css
@@ -10,7 +10,7 @@
 .NewCollection_item {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin-top: 70px;
+    /* margin-top: 70px; */
     gap: 10px;
     width: min-content;
 
