--- a/src/Pages/ShopCategory/ShopCategory.css
+++ b/src/Pages/ShopCategory/ShopCategory.css
@@ -23,3 +23,32 @@
 .category_banner {
     width: 100%;
 }
+
+.Shopcategory-index p {
+    float: left;
+    margin-left: 10%;
+}
+
+.Shop_sort {
+    float: right;
+    margin-right: 10%;
+    border: 1px solid grey;
+    border-radius: 20px;
+    padding: 0.5%;
+    margin-top: 16px;
+    cursor: pointer;
+}
+
+.loadMore {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 150px auto;
+    border-radius: 75px;
+    background: #ededed;
+    color: black;
+    width: 200px;
+    height: 50px;
+    cursor: pointer;
+    font-size: 20px;
+}
