--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .Navbar {
     display: flex;
     justify-content: space-around;
-    padding: 5px 16px;
+    /* padding: 5px 16px; */
     box-shadow: 1px 2px 3px -2px black;
 }
 
@@ -21,6 +21,7 @@
     gap: 60px;
     color: black;
     font-size: 20px;
+    margin-bottom: 10px;
 }
 
 .nav-links li a,
