--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -65,3 +65,14 @@ input::-webkit-input-placeholder {
     font-size: 20px;
     font-weight: 700;
 }
+
+.login_heading img {
+    width: 10%
+}
+
+.login_heading {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
