--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -14,6 +14,25 @@ input::-webkit-input-placeholder {
 
 }
 
+@media screen and (max-width: 950px) {
+    .Login_div.credentials {
+        margin-left: 3%;
+        margin-top: 2%;
+
+        padding: 20px 0 28px;
+        width: 90%;
+    }
+
+    .Login_div.credentials input {
+        width: 90%;
+    }
+
+    .footer_ul {
+        flex-direction: column;
+    }
+}
+
+
 
 .credentials {
 
